More generous z-index for the public transit stop markers. Single markers generally worked well, but clusters behaved differently and were sometimes overshadowed by the berries. Far from perfect solution, but with leaflet v0.7.7 using pane ordering/z-index with clusters is not an easy alternative

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -124,7 +124,7 @@
 
 // Cluster
 // ---
-@cluster-z-index: 1000;
+@cluster-z-index: 5000;
 
 
 // Focus states
